--- a/src/main/resources/templates/uploadForm.html
+++ b/src/main/resources/templates/uploadForm.html
@@ -6,9 +6,10 @@
 </div>
 
 <div>
-    <form method="POST" enctype="multipart/form-data" action="/">
+    <form method="POST" enctype="multipart/form-data" action="/upload">
         <table>
-            <tr><td>File to upload:</td><td><input type="file" name="file" /></td></tr>
+<!--            <tr><td>File to upload:</td><td><input type="file" name="file" /></td></tr>-->
+            <tr><td>Files to upload:</td><td><input type="file" name="multipleFile" multiple/></td></tr>
             <tr><td></td><td><input type="submit" value="Upload" /></td></tr>
         </table>
     </form>
